システム監査メモ追加

--- a/_posts/2017-03-11-システム監査メモ.md
+++ b/_posts/2017-03-11-システム監査メモ.md
@@ -4,6 +4,686 @@ title: システム監査試験メモ
 tags: 勉強 2017
 category: 勉強
 ---
-## 情報処理技術者：システム監査試験メモ
+# 情報処理技術者：システム監査試験メモ
 
-* 
+## 1 関連法規の要点
+
+### 1-1 システム監査基準、システム管理基準
+
+- 昭和60年公表、平成8年改訂、平成16年10月にIT技術革新への対応を行って公表
+
+#### (1) 改訂の背景
+
+  1. IT技術の革新への対応
+  2. 事業における情報システムの位置づけの変化への対応
+  3. 社会に対する説明責任の高まりと保証型監査の必要性
+  4. 「情報システム管理の基準」と「監査人の行為規範」の峻別
+    -  前者を「システム管理基準」、後者を「システム監査基準」
+  5. 情報セキュリティ監査制度との関係
+    - 2003年4月から「情報セキュリティ監査制度」の運用開始
+
+#### (2) システム監査と情報セキュリティ監査
+
+- <span style="color:red">システム監査</span>
+  - 企画・開発・運用・保守という情報システムライフルサイクルに従って、特に情報システム構築・運用の全体最適化を目的とする
+- <span style="color:red">情報セキュリティ監査</span>
+  - 情報資産のライフサイクルに従って、 **情報システム以外の部分** も対象として情報セキュリティ確保のための管理・運用を有効に行うことを目的とする
+
+#### (3) システム監査基準の構成
+
+- システム監査基準
+  1. システム監査の目的
+  2. 一般基準
+  3. 実施基準
+  4. 報告基準
+
+##### (a) 目的
+  - 組織体の情報システムにまつわるリスクに対するコントロールがリスクアセスメントに基づいて適切に整備・運用されているかを評価する
+  - 独立かつ専門的な立場のシステム監査人が検証又は評価することによって、保証を与えたり助言を行ったりして、ITガバナンスの実現に寄与する
+
+##### (b) 一般基準
+
+- 一般基準
+  - 目的、権限と責任
+  - 独立性、客観性と職業倫理
+  - 専門能力
+  - 業務上の義務
+  - 品質管理
+
+##### (c) 実施基準
+
+- 実施基準
+  - 監査計画の立案
+  - 監査の手順
+  - 監査の実施
+  - 監査業務の体制
+  - 他の専門職の利用
+  - 情報セキュリティ監査
+
+##### (d) 報告基準
+
+- 報告基準
+  - 監査報告書の提出と開示
+  - 監査報告の根拠
+  - 監査報告書の記載事項
+  - 監査報告についての責任
+  - 監査報告に基づく改善指導
+
+
+#### (4) システム管理基準の構成
+
+- システム管理基準
+  - 情報戦略
+  - 企画業務
+  - 開発業務
+  - 運用業務
+  - 保守業務
+  - 共通業務
+
+#### (5) 情報戦略
+
+- 情報戦略
+  - 全体最適化
+  - 組織体制
+  - 情報化投資
+  - 情報資産管理の方針
+  - 事業継続計画
+  - コンプライアンス
+
+#### (6) 企画業務
+
+- 企画業務
+  - 開発計画
+  - 分析
+  - 調達
+
+#### (7) 開発業務
+
+- 開発業務
+  - 開発手順
+  - システム設計
+  - プログラム設計
+  - プログラミング
+  - システムテスト・ユーザー受け入れテスト
+  - 移行
+
+#### (8) 運用業務
+
+- 運用業務
+  - 運用管理ルール
+  - 運用管理
+  - 入力管理
+  - データ管理
+  - 出力管理
+  - ソフトウェア管理
+  - ハードウェア管理
+  - ネットワーク管理
+  - 構成管理
+  - 建物・関連設備管理
+
+#### (9) 保守業務
+
+- 保守業務
+  - 保守手順
+  - 保守計画
+  - 保守の実施
+  - 保守の確認
+  - 移行
+  - 情報システムの廃棄
+
+#### (10) 共通業務
+
+- 共通業務
+  - ドキュメント管理
+  - 進捗管理
+  - 品質管理
+  - 人的資源管理
+  - 委託・受託
+  - 変更管理
+  - 災害対策
+  
+### 1-2 セキュリティ関連基準
+
+#### (1) 情報セキュリティ監査基準、情報セキュリティ管理基準
+
+- 経済産業省：平成15年4月 情報セキュリティ監査制度を告示
+
+- <span style="color:red">情報セキュリティ監査</span>
+  - 情報セキュリティに係るリスクのマネジメントが効果的に実施されるように、リスクセスメントに基づく適切なコントロールの整備、運用状況を、情報セキュリティ監査を行う主体（情報セキュリティ監査人）が独立かつ専門的な立場から、国際的にも整合性のとれた基準に従って検証又は評価し、もって保証を与えあるいは助言を行う活動
+
+- ガイドライン
+
+|情報セキュリティ監査基準|情報セキュリティ管理基準|
+|:---:|:---:|
+|情報セキュリティ監査基準実施基準ガイドライン<br/>情報セキュリティ監査基準報告基準ガイドライン|個別管理基準(監査項目)策定ガイドライン|
+
+- モデル
+
+|情報セキュリティ監査基準|情報セキュリティ管理基準|
+|:---:|:---:|
+|電子政府情報セキュリティ監査基準モデル|電子政府k情報セキュリティ管理基準モデル|
+
+##### (a) 情報セキュリティ監査基準
+
+* 監査の際に監査を行う主体が従うべき **行為規範** を示す基準
+* 情報セキュリティ監査の目的、一般基準、実施基準、報告基準から構成される
+
+##### (b) 情報セキュリティ管理基準
+
+* 各組織体が自らの管理基準等を規定する場合の拠り所
+* 情報セキュリティ監査の判断の尺度となる基準
+* JIS X 5080:2002に準じる、ISMSとも整合性がとれている
+
+- 情報セキュリティ管理基準
+  - セキュリティ基本方針
+  - 組織のセキュリティ
+  - 資産の分類および管理
+  - 人的セキュリティ
+  - 物理的及び環境的セキュリティ
+  - 通信及び運用管理
+  - アクセス制御
+  - システムの開発及び保守
+  - 事業継続管理
+  - 適合性
+
+#### (2) コンピュータウィルス対策基準
+
+* 経済産業省、平成３年、平成７年に改訂
+* コンピュータウィルスに対する予防、発見、駆除、復旧等について実効性の高い対策をとりまとめたもの
+
+##### (a) コンピュータウィルスの定義
+
+* 次の機能の１つ以上を有するもの
+  * <span style="color:red">自己伝染機能</span>
+  * <span style="color:red">潜伏機能</span>
+  * <span style="color:red">発病機能</span>
+
+##### (b) 基準の構成
+
+- コンピュータウィルス対策基準
+  - システムユーザ基準
+  - システム管理者基準
+  - ソフトウェア供給者基準
+  - ネットワーク事業者基準
+  - システムサービス事業者基準
+
+- **ウィルス発見の届け出**
+  - システム管理基準では、ウィルスが発見された場合には、ウィルスの拡大及び再発を防止するため、必要な情報を経済産業省大臣が指定する者(IPA)に届け出ることが義務付けられている
+
+#### (3) コンピュータ不正アクセス対策基準
+
+- コンピュータ不正アクセスによる被害の予防、発見及び復旧並びに拡大及び再発防止について、企業等の組織及び個人が実行すべき対策を取りまとめたもの
+
+- 次の４つの基準からなる
+  - システムユーザー基準
+  - システム管理者基準
+  - ネットワークサービス事業者基準
+  - ハードウェア・ソフトウェア供給者基準
+
+#### (4) ソフトウェア管理ガイドライン
+
+* ソフトウェアの適正管理のため、平成7年に制定
+* ソフトウェアの違法複製を防止するため、法人、団体等を対象として、ソフトウェアを使用するに当たって実行されるべき事項を取りまとめたもの
+
+- ガイドラインの構成
+  - 法人等が実施すべき基本的事項
+  - ソフトウェア管理責任者が実施すべき事項
+  - ソフトウェアユーザが実施すべき事項
+
+1. 法人等が実施すべき基本的事項
+  - ソフトウェア管理責任者の任命
+  - ソフトウェア管理規則の制定
+  - ソフトウェア監査の実施
+  - ソフトウェアユーザの教育、啓蒙
+2. ソフトウェア管理責任者が実施すべき事項
+  - ソフトウェア管理台帳の整備
+  - ソフトウェアの違法複製等を発見した場合の適切な処置
+  - 使用条件の周知徹底
+3. ソフトウェアユーザが実施すべき事項
+  - 使用条件並びにソフトウェア管理責任者の指示の遵守
+  - 個人保有のソフトウェアを使用する場合は、ソフトウェア管理責任者の承諾を得る
+
+#### (5) セキュリティ関連の基準とガイドライン
+
+##### (a) ISO27001 (情報セキュリティマネジメントシステム要求事項）
+
+- 情報セキュリティマネジメントシステム（ISMS）を確立、導入、運用、監視、レビュー、維持及び改善するためのモデルを提供するために作成された規格
+- 組織が保護すべき情報資産について、機密性、完全性、可用性などの評価に使用される
+- 認証制度あり
+  - 日本ではJIPDEC(一般財団法人日本情報経済社会推進協会）の認定を受けた審査登録機関がJISQ27001（ISO27001と互換性を確保）との適合性について認証審査を行う
+
+##### (b) ISO 15408 (JIS X 5070)
+
+- 情報処理製品の評価と認証のためのセキュリティ機能要件と保証要件をまとめたもの
+- 1999年に国際規格化
+
+- 3つのパートからなる
+  1. パート１：セキュリティ評価の概念とモデル
+  1. パート２：セキュリティ機能要件
+  1. パート３：セキュリティ保証要件
+
+- **評価保証レベル(EAL)**
+  - EALはセキュリティの水準を示したもの（1〜7)
+  - これに基づいた第三者機関による認証も行われる
+
+|保証レベル|特徴|適用環境|
+|:---:|:---:|:---:|
+|EAL1|一般向け機能テスト|閉じられた環境で安全な利用運営が保証される場合|
+|EAL2|プログラム構造の検証|利用者や開発者が限定されていて、重大な脅威はない場合|
+|EAL3|開発者の実施テスト検証|不特定利用者が利用できる環境で、不正対策が要求される場合|
+|EAL4|プログラム処理内容の検証|市場向け製品やシステムとして必要なセキュリティ確保が要求される場合|
+|EAL5|ソースコードの検証|市場向け製品やシステムとして最大限のセキュリティ確保が要求される場合|
+|EAL6|ソフトウェア工学による検証|大きなコスト負担でも保護すべき情報を処理しなければならない場合|
+|EAL7|公式言語使用による制作|最高レベルのセキュリティ確保を必要とする場合|
+
+### 1-2 セキュリティ関連法規
+
+#### (1) 刑法
+
+- コンピュータ関係の犯罪は刑法で規定を設けている
+- コンピュータ記録の偽造や詐欺については犯罪と定義し、罰則の規定がある
+
+1. 電磁的記録の定義
+1. 電磁的記録の不正作出・供用罪
+1. 電子計算機損壊業務妨害罪
+1. 電子計算機使用詐欺罪
+
+#### (2) 不正アクセス禁止法
+
+* 刑法の規定：実際に詐欺、損壊などの被害が発生しないと罰することができない
+  - 被害が発生していなくても不正アクセスがあっただけで罰することが望ましい
+  - → 不正アクセス禁止法
+
+- 目的
+  - 電気通信回線を通じて行われる電子計算機に係る犯罪の防止及びアクセス制御機能により実現される電気通信に関する秩序の維持を図り、もって高度情報通信社会の健全な発展に寄与する
+
+- 不正アクセス行為
+  - なりすまし、認証サーバーを騙して目標の端末を利用可能にする、内部ネットワークの目標に達しるなど
+- 不正アクセス行為を助長する行為
+  - 認証情報を、端末利用者や管理者以外の人間に漏らしたり流布する行為
+
+### 1-4 J-SOX法（金融商品取引法）とシステム監査
+
+- J-SOX法という法律はない
+- 2006年6月に制定された「金融商品取引法」第24条の4の4で上場会社は内部統制の評価が義務付けられたことをさして「J-SOX法」と呼んでいる。
+
+#### (1) 金融商品取引法の内部統制に関する規定
+
+- 内部統制報告書の提出義務
+  - 内部統制報告書
+    - 事業年度ごとに、当該会社の属する企業集団及び当該会社に係る財務計算に関する書類その他の適正性を確保するために必要な体制について評価した報告書
+- 内部統制報告書の監査証明
+  - 内部統制報告書には、公認会計士又は監査法人の監査証明を受けなければならない
+
+#### (2) 実施のガイドライン
+
+- 企業会計審議会から２つのガイドライン
+  - 財務報告に係る内部統制の評価及び審査の基準
+  - 財務報告に係る内部統制の評価及び監査に関する実施基準
+
+##### (a) 内部統制の基本的枠組み
+
+- 6つの枠組みで捉える
+
+1. 統制環境
+1. リスクの評価と対応
+1. 統制活動
+1. 情報と伝達
+1. モニタリング
+1. ITへの対応
+
+##### (b) 内部統制の限界
+
+- 下記の４つ
+  - 内部統制は、判断の誤り、不注意、複数の担当者による共謀によって有効に機能しなくなる場合がある
+  - 内部統制は、当初想定していなかった組織内外の環境の変化や非定型的な取引等には、必ずしも対応しない場合がある
+  - 内部統制の整備及び運用に際しては、費用と便益との比較衡量が求められる
+  - 経営者が不当な目的の為に内部統制を無視ないし無効ならしめることがある
+
+##### (c) 全社的な内部統制と業務プロセスに係る内部統制
+
+* 内部統制 = 全社的な内部統制 ＋ 業務プロセスに係る内部統制
+  - 全社的な内部統制
+    - 内部統制の環境が適切であるかどうかを評価する
+  - 業務プロセスに係る内部統制
+    - ここの業務プロセスに設定されている内部統制を評価する
+
+##### (d) 内部統制評価の手順
+
+- 内部統制評価の手順
+  1. 全社的な内部統制の評価
+  1. 業務プロセスに係る内部統制の評価
+  1. 内部統制の有効性の判断
+  1. 内部統制の重要な欠陥の是正
+  1. 評価手段等の記録及び保存
+
+##### (e) 内部統制とIT統制
+
+- IT統制も全社的な内部統制と業務プロセスに係る内部統制に分かれる
+
+- 内部統制
+  - 全社的な内部統制
+    - **IT全社的統制**
+  - 業務プロセスに係る内部統制
+    - **IT全般統制**
+    - **IT業務処理統制**
+
+##### (f) IT全社的統制の内容
+
+- 次の５つの観点から必要な内部統制を考える
+  - ITに関する基本方針の作成と明示（ **統制環境** ）
+  - ITに関するリスクの評価と対応（ **リスクの評価と対応** ）
+  - 統制手続きの整備と周知（ **統制活動** ）
+  - 情報伝達の体制と仕組みの整備（ **情報と伝達** ）
+  - 全社的な実施状況の確認 ( **モニタリング** )
+
+### 1-5 個人情報保護関連法規
+
+#### (4) OECDプライバシーガイドライン
+
+- OECD(経済協力開発機構)で1980年に採択された、個人情報保護に関して官民両組織に適用される最小限の基準である
+- ８原則
+  - **収集制限の原則**
+    - いかなる個人データも、適法かつ公正な手段によって、かつ適当な場合には、データ主体に知らしめ又は同意を得た上で収集されるべきである
+  - **データ内容の原則**
+    - 個人データは、その利用目的に沿ったものであるべきであり、かつ利用目的に必要な範囲で正確、完全であり最新なものに保たれなければならない。
+  - **目的明確化の原則**
+    - 個人データの収集目的は、収集時より遅くない時点において明確化されなければならず、その後のデータの利用は、当該収集目的の達成又は当該収集目的に矛盾せず、かつ目的の変更ごとに明確化されたほかの目的の達成に限定されるべきである
+  - **利用制限の原則**
+    - 明確化された目的以外の目的のために開示利用その他の使用に供されるべきではない
+      - 例外：本人の同意があるとき、法律の規定による場合
+  - **安全保護装置の原則**
+    - 個人データは、その紛失若しくは不当なアクセス・破壊・使用・修正・開示等の危険に対し、合理的な安全保護装置により保護されなければならない
+  - **公開の原則**
+    - 個人データに係る開発、運用及び政策については、一般的な公開の政策が取られなければならない。
+  - **個人参加の原則**
+    - 個人は次の権利を有する
+      - データ管理者が自己に関するデータを有しているか否かについて、データの管理者又はその他の者から確認を得ること
+      - 自己に関するデータを、合理的な期間内に、過度にならない費用で、合理的な方法でかつ自己にわかりやすい形で、自己に知らしめられること
+      - 上記の要求が拒否された場合には、その理由が与えられること、及び、そのような拒否に対して意義を申し立てることができること
+      - 自己に関するデータに対して異議を申し立てること、及びその異議が認められた場合には、そのデータを消去、修正、完全化、補正させること
+  - **責任の原則**
+    - データ管理者は、上記の諸原則を実施するための措置に伴い責任を有する
+
+#### (5) 個人情報保護法
+
+- 平成15年6月に交付、個人情報保護法
+- 日本における個人情報の適正な取り扱いに関する基本理念を定め、国及び地方公共団体の責務を規定し、更に民間の個人情報取り扱い業者の義務等を定めている。
+
+- 個人情報の取り扱い
+  - 利用目的を特定しなければならない
+  - 利用目的の範囲内で取り扱わなければならない
+  - 適正な手段で取得しなければならない
+  - その利用目的を、本人に通知し、または公表しなければならない
+  - 個人情報は正確性を確保しなければならない
+  - 個人情報の安全を確保するように努めなければならない
+  - 従業員・委託先について、個人データの安全管理が図られるよう、必要な監査を行わなければならない
+  - 第三者への提供は制限される
+
+- 本人関与
+  - 本人から求められた場合には、その情報の開示、訂正、利用停止の義務がある
+
+- 苦情処理
+  - 自律的な苦情処理等を行う個人情報保護団体は主務大臣の認定を受けることができる
+  - この団体は対象事業者の名称を公表する
+
+- 事業社に対する監督
+  - 主務大臣による事後的なチェックが行われる（報告徴収、助言、勧告、命令）
+  
+#### (6) プライバシーマーク制度
+
+- 適用ボタンと付与機関
+  - プライバシーマークの運用と付与：一般財団法人日本情報経済社会推進協会（JIPDEC）
+
+- 審査期間
+  - JIPDECから指定された業界団体が JIPDEC に代わって、会員等からプライバシーマーク付与に係る申請の受付・審査と付与可否の認定等を行う
+
+- 付与の対象
+  - 国内に拠点を置く事業者
+  - JIS Q 15001 「個人情報保護マネジメントシステムー要求事項」に順序した個人情報保護マネジメントシステムを定めており、実現可能な体制が整備され、個人情報の取り扱いが適切に実施されている
+  - JIPDECが定める欠格事項に該当しない
+    
+### 1-6 知的所有権関連法規
+
+#### (1) 著作権法
+
+##### (a) 著作権法により保護される主要な権利
+
+1. プログラムの保護
+  - 著作権法はプログラムも著作物として捉え、その複製や改変を制限している。
+  - ただし、プログラム言語、規約、解放（アルゴリズム）は保護の対象とならない
+2. データベースの著作権
+  - データベースでその情報の選択又は体系的な構成によって創作性を有するものは著作物として保護する
+3. **著作者人格権**
+  - **公表権**
+  - **氏名表示権**
+  - **同一性保持権**
+4. 複製権
+  - 私的利用：私的利用のための複製は著作権侵害にならない
+  - 所有者による複製：プログラム所有者は、それをコンピュータで自分が利用するために必要な限度において複製又は翻案することができる
+5. プログラム改変の特例
+  - 以下の改変は認められる
+    - 特定のコンピュータにおいては利用し得ないプログラムの著作物を当該コンピュータにおいて利用し得るようにするための改変
+    - プログラムの著作物をコンピュータにおいてより効果的に利用し得るようにするための改変
+
+##### (b) 権利の帰属
+
+1. **職務著作**
+  - 法人等に著作者の地位を与えようとする制度
+  - 法人等が著作権だけでなく、 **著作人格権** も取得することになる
+  - 要件
+    - 法人等の発意
+    - 法人等の業務に従事するものが職務上作成
+    - **法人等の名義で公表（プログラムは除く）**
+    - 契約、勤務規則その他に別段の定めがないこと
+2. プログラムに関する職務著作
+  - プログラムについては、「法人等の名義で公表」していなくても法人に属する
+3. 請負開発の著作権
+  - 原則として著作権は受託側にある
+4. 著作権の発生
+  - 著作者人格権及び著作権の享有には、いかなる方式の履行も要しない
+  - 著作権の存続期間は、著作物の創作に時に始まる
+
+##### (c) 著作権に関する国際条約
+
+1. ベルヌ条約（無方式主義）
+1. 万国著作権条約（方式主義）
+  - (C)、著作権者の氏名、最初の発行年
+
+- 1989年に米国もベルヌ条約を推進したため、現在は **無方式主義が世界の大勢** になっている
+
+#### (2) 特許法
+
+- ソフトウェアのノウハウは特許権で保護されることがある
+- 「発明の保護及び利用を図ることにより、発明を奨励し、もって産業の発達に寄与する」ことを目的としている
+
+1. 発明とは
+  - 自然法則を利用した技術的思想の創作のうち高度のものをいう
+2. 特許成立の要件
+  - 産業上利用することができる
+  - 新規性がある
+    - 次のものは新規性が喪失する
+      - 公然知られた発明（学会発表後６ヶ月以内に出願する必要がある）
+      - 公然実施された発明
+      - 刊行物に記載された発明又は電気通信回線を通じて公衆に利用可能となった発明
+  - 進歩性がある
+      - 通常の知識を有するものが容易に発明することができる場合は、特許を受けることはできない
+3. 出願
+  - 特許は最先の出願のみに認められる
+4. ソフトウェアの特許
+  - ビジネスモデル特許として、ソフトウェアの特許を認めるようになった
+5. 職務発明
+  - 発明者である従業員に「特許を受ける権利」を認めるとしながらも、使用者の会社には、当該特許権についての「通常実施権」を与えている
+  - 従業員等は職務発明について使用者等にに特許を受ける権利若しくは特許権を承継させ、又は使用者等のため専用実施権を設定したときは、相当の対価の支払いを受ける権利を有する
+
+#### (3) 不正競争防止法
+
+- 営業秘密は、不正競争防止法 で保護される
+
+1. 営業秘密の要件
+  - 非公知性：公然と知られていない
+  - 秘密管理性：秘密として管理されている
+  - 有用性：販売方法その他の事業活動に有用な技術上又は営業上の情報である
+2. 不正行為
+  - 秘密を搾取、不正な手段で取得、営業秘密と知りながら取得、使用、開示 etc
+3. ドメイン名の保護
+  - 不正の利益を得る目的で、又は他人に損害を加える目的で、他人の商標等と同一又は類似のドメイン名を取得・保有・使用する行為を「不正競争」と定める
+
+### 1-7 労働関連法規
+
+#### (1) 労働基準法
+
+1. 労働時間
+  - 一週間の法定労働時間は40時間、1日の法定労働時間は8時間を原則とする
+2. 休憩時間
+  - 労働時間が6時間を越える場合は45分異常、8時間を越える場合は1時間以上の休憩時間を労働時間の途中に与えなければならない
+3. 休日
+　- 休日は少なくとも週１回、４週間を通じて４日以上の休日でも良い
+4. 時間外及び休日の労働
+  - 労働組合、または労働者の過半数の代表と書類による協定をし、所轄労働基準監督署に届け出た場合は、時間外労働及び休日労働を認めている
+5. 年次有給休暇
+
+#### (2) 男女雇用機会均等法
+
+- 雇用の分野における男女の均等な機会及び待遇の確保を図るとともに、女性労働者の就業に関して、妊娠中及び出産後の健康の確保を図る等の措置を推進することを目的としている。
+
+1. 募集及び採用
+  - 性別にかかわりなく均等な機会を与えなければならない
+2. 差別的取扱
+  - 労働者の性別を理由として、差別的取扱をしてはならない
+3. 性別以外の事由を要件とする措置
+
+#### (3) 労働者派遣法
+
+- 労働者派遣事業の適正な運営の確保に関する措置を構ずるとともに、派遣労働者の就業に関する条件等の整備等を図り、派遣労働者の雇用安定と福祉増進に寄与することを目的としている
+
+### 1-8 その他の法律
+
+#### (1) 電子帳簿保存法
+
+- 従来、紙ベースで作成、保管を義務付けられていた国税関係帳簿書類が、承認を受ければ電子帳簿として保存することが認められた
+- 適用の要件： **真実性** と **可視性** を確保するために、次の要件を満たす必要がある
+  - 記載事項の訂正や削除の事実と内容を確認できること
+  - 保存場所に処理設備を置き、操作説明書を常備して記録内容が明瞭かつ速やかに出力できるようになっていること
+  - 記録事項の検索ができる機能を確保すること
+
+#### (2) e-文書法
+
+- 民間事業者に対して書面の保存等が法令上義務付けられている場合について、原則として当該書面に係る電磁的記録による保存等を行うことを可能にするための共通事項を定めた法律
+- これにより商法や税法などで企業に保存が義務付けられている文書について、電子化された文書ファイルでの保存が認められるようになった
+
+- 要件
+  - 電子署名がされていること
+  - 一定以上の精細度(200dpi以上)でカラーのイメージであること
+- 認められる文書の例
+  - 納品書、注文所、契約書、領収書(3万円未満)、定款、株主総会資料
+- 認められない文書の例
+  - 契約書及び領収書(3万円以上)、免許書
+
+#### (3) 電子署名法
+
+- 目的
+  - 電子署名に関し、電磁的記録の真正な成立の推定、特定認証業務に関する認定の制度その他必要な事項を定めることにより、電子署名の円滑な利用の確保による情報の電磁的方式による流通及び情報処理の促進を図り、国民生活の向上及び国民経済の健全な発展に寄与することを目的とする
+
+- 電子署名の定義
+  - 当該措置を行った者の作成であることを示すもの
+  - 改変が行われていないかどうかを確認することができるもの
+- 電磁的記録の真正性
+  - 本人による電子署名が行われているときは、真正に成立したものと推定する
+- 認証業務とは
+- 特定認証業務とは
+  - 電子署名のうち、その方式に応じて本人だけが行うことができるものとして主務省令で定める基準に適合するものについて行われる認証業務をいう
+  - 特定認証業務を行おうとする者は、主務大臣の認定を受けることができる
+
+#### (4) 特定電子メール法
+
+- 一時的に多数の者に対してされる特定電子メールの送信等による電子メールの送受信上の支障を防止する必要性が生じていることをかんがみ、特定電子メールの送信の適正化のための措置等を定めることにより、電子メールの利用についての良好な環境の整備を図り、もって高度情報通信社会の健全な発展に寄与することを目的している。
+
+- 特定電子メールの定義
+  - 営利団体や個人事業者が自己又は他人の営業につき広告又は宣伝を行うための手段として送信するメールをいう
+- 特定電子メールの送信の制限
+- 表示義務
+
+#### (5) 特定商取引法
+
+- 消費者に無断の広告メールが送られる被害を防ぐ
+  - 請求や承認を得ていない電子メール広告の原則禁止( **オプトイン規制** )
+  - 電子メール広告の送信を拒否する方法の表示義務と、電子メール広告の送信を拒否した消費者への送信禁止
+  - 消費者からの請求や承諾の記録保存義務
+
+#### (6) 電子消費者契約法
+
+- 消費者が行う電子消費者契約の要素に特定の錯誤があった場合及び隔地者間の契約において電子承諾通知を発する場合に関し民法の特例を定めるもの
+
+- 電子消費者契約とは
+- 承諾の意思表示
+  - 電子消費者契約の要素に錯誤があった場合であって、当該錯誤が次のいずれかに該当するときは、適用しない。ただし、その消費者の申し込み若しくはその承諾の意思表示を行う意思の有無について、確認を求める措置を講じた場合はこの限りではない
+    - 消費者がその使用する電子計算機を用いて送信したときに当該事業者との間で電子消費者契約の申し込み又はその承諾の意思表示を行う意思がなかったとき
+    - 消費者がその使用する電子計算機を用いて送信したときに当該電子消費者契約の申し込み又はその承諾の意思表示と異なる内容の意思表示を行う意思があったとき。
+
+- つまり、インターネット等での注文は、間違って申し込みをしたときは取り消すことができる。しかし、 *申し込みの意思表示の確認画面で、確認をした場合には、取り消すことができない。*
+
+#### (7) 下請代金支払遅延等防止法
+
+- 下請代金の支払遅延等を防止することによって、親事業者の下請事業者に対する取引を公正ならしめるとともに、下請事業者の利益を保護し、国民経済の健全な発達に寄与することを目的とする
+
+##### (a) 親事業者（発注者）・下請事業者（受注者）の定義
+
+- 物品の製造・修理委託及び情報成果物作成委託・役務提供委託（プログラム作成、運送、物品の倉庫における保管及び情報処理に係るもの）の場合
+
+|親事業者|下請事業者|
+|:---:|:---:|
+|資本金3億円超|資本金3億円以下(個人を含む)|
+|資本金1千万円超3億円以下|資本金1千万円以下(個人を含む)|
+
+- 情報成果物作成・役務提供委託（プログラム作成、運送、物品の倉庫における保管及び情報処理に係るものを除く）の場合
+
+|親事業者|下請事業者|
+|:---:|:---:|
+|資本金5千万円超|資本金5千万円以下(個人を含む)|
+|資本金1千万円超5千万円以下|資本金1千万円以下(個人を含む)|
+
+##### (b) 支払期日
+
+- 親事業者が下請事業者の給付を受領した日から起算して60日間内で、できるだけ短い期間内
+
+##### (c) 書面の交付
+
+- 親事業者は下請事業者に対し製造委託又は修理委託した場合は、下請事業者の給付の内容、下請代金の額、支払期日、支払い方法などを記載した書面を下請事業者に交付しなければならない
+
+#### (8) PL法（製造物責任法）
+
+- 製造物の欠陥により人の生命、身体又は財産に係る被害が生じた場合における製造業者等の損害賠償の責任について定めることにより、被害者の保護を図り、もって国民生活の安定向上と国民経済の健全な発展に寄与することを目的としている。
+
+- 欠陥とは
+  - 当該成果物が通常有すべき安全性を欠いていることをいう
+- PL法の特徴
+  - 消費者は製造業者の過失を証明する必要がない
+- ソフトウェアの扱い
+  - 通常のソフトウェアは対象外、ただし、ハードウェアに組み込まれたソフトウェアは対象
+- 免責事項
+  - 製造業者が引き渡した時点における科学又は技術に関する知見によっては、当該製造物にその欠陥があることを認識することができなかった場合
+  - 当該他の製造部部の製造業者が行った設計に関する指示に従ったことにより生じ、かつ、その欠陥が生じたことにつき過失がないこと
+
+#### (9) プロバイダ責任制限法
+
+- インターネットでプライバシーや著作権の侵害があったときに、プロバイダが負う損害賠償責任の範囲や情報発信者の情報の開示を請求する権利を定めた法律である
+
+- 賠償責任の制限
+  - 情報の流通により他人の権利が侵害されたときは次の場合を除いて、賠償の責めに任じない。
+    - 他人の権利が侵害されていることを知っていたとき
+    - 他人の権利が侵害されていることを知ることができたと認めるに足りる相当の理由があるとき
+
+- 賠償責任の制限
+  - 次の場合は、送信を防止されたものの損害について損害賠償の責めに任じない
+    - 他人の権利が不当に侵害されていると信じるに足る相当の理由があるとき
+    - 権利を侵害されたものから申出があった場合は、送信防止措置を講じることに同意するか、照会して7日間同意の申し出がないとき
+
+- 発信者情報の開示請求等
+  - 権利が侵害されたときは、侵害に係る発信者情報の開示を請求することができる。
+  - 開示するかどうかについて、当該発信者の意見を聞く必要がある
+
+
+
+
+
