--- a/_posts/2017-03-15-IoTの衝撃.md
+++ b/_posts/2017-03-15-IoTの衝撃.md
@@ -12,13 +12,77 @@ category: 読書 勉強
 
 ### 1-1 インターネットの発展はいったん完結を迎えた
 
+- ３つのインターネット
+  1. ネットワーク・オブ・ネットワークス
+     - 国際的にネットワークをつなぐメタネットワーク＝一般に使われるインターネットの意味
+  2. The Internet
+     - TCP/IP という通信手段で動くネットワーク同士をつなぐインターネット
+  3. TCP/IPを使うがバラバラに動くネット
+     - NTTのNGNなど、世界のインターネットとはつながっていない
+
+- IoTの歴史
+  1. RFIDの研究 (MIT)
+     - パッシブ・タグ
+     - MITのケビン・アシュトンを中心に慶応大学も協力
+     - RFID=物流に乗るすべての商品の管理情報にインターネットからアクセス＝IoT
+  2. スマートフォン、PCの小型化
+     - モノ自体がTCP/IPでインターネットに繋がる展開
+
+- インターネット
+  - 世界中のコンピュータをつなぎ、人間同士のコミュニケーションが自由に
+  - インターネット発展の最初のストーリーは完結を迎えた
+
 ### 1-2 IoTを実現するために乗り越えるべき二つの課題
 
+- センサーネットワーク時代の代表的な議題
+  1. プライバシーに関する議論
+    - 防犯カメラのデータ→プライバシー侵害、政府の監視→大規模な社会論争に
+    - サイネージ（電子看板）→年齢や性別を判断して広告を変える→個人のプライバシーの侵害の恐れ
+  2. 発生したデータは誰のものか？
+    - 自動車の実験＝人間をセンサーとして使う→フロントワイパーはセンサーと同じ
+    - 誤ったデータの流れが混乱を招くことが懸念された
+    
 ### 1-3 IoTでサービスの概念が変わる
+
+- ４つのキーワード
+  - 人、モノ、データ、サービス
+
+- 家電から医電へ
+  - フィリップス：家電からの撤退、医電への注力（ヘルスケア分野）
+  - 洗濯機→洗剤を入れる前に水でかき混ぜる→水の中に汗などの成分→バイオ分析で体調把握
+  - 掃除機→吸い込んだ髪の毛を自動的に分析
+  - クラウドで分析
+- 農業
+  - コンバインにセンサー
+  - 収穫時に水やタンパク質の成分、土の質などを分析→収穫時においしいコメかどうかを判断
+
+- サービスサイエンス→新しいサービスの誕生が期待される
 
 ### 1-4 モノづくりの変革で「QIP」はどう変わるのか
 
+- IoT → ものづくり分野に大きなインパクト
+  - 機器がインターネットの正式な市民に
+    - Chromebook から印刷 → クラウドからプリンタへ出力
+    - 3Dプリンタ、デジタルミシン、レーザーカッター
+
+- QIP (Quality Control, Intellectual Property, Product liability)
+  - 品質管理、知的財産権、製造物責任
+- 品質管理
+  - 品質を確認するための機能は第三者的な測定が必要である
+  - 分散的かつソーシャルなコミュニティの仕事になるものの、その工程を省略することはできない
+- 知的財産権
+  - 誰でも作れる→有名ブランドのバッグを自作
+- 製造物責任
+  - ある製品が定められた大きさ、正しい材料、必要な強度＝テストして認定する仕組みを分散的に構築する必要がある
+  
 ### 1-5 社会は技術とともに発展する
+
+- 社会の役に立てなければ技術は意味を持たない
+- 技術のプラットフォーム化→実用化と標準化が必要
+- 社会制度の整備が必要
+  - これまでにない「ファブ社会」
+
+- 産業革命のような大きな社会の変化の可能性→人間のライフスタイルの前提を覆すことになるだろう
 
 ## 2 IoT時代の競争戦略
 
@@ -27,13 +91,119 @@ category: 読書 勉強
 
 ### 2-1 「モノ」の本質が変化し始めている
 
+- 「接続機能を持つスマート製品」(Smart, connected products)は、処理能力の向上や機器の小型化の目覚ましい進展、ワイヤレス接続の普及というネットワークかの恩恵によって実現し、競争の新時代の幕開けをもたらした。
+
+- スマート製品 → 新たな機能性、信頼性、稼働率の格段の向上、従来の垣根を超えたケイパビリティ → 製品の本質が変更 + バリューチェーンの変化
+  - 企業の社内活動のほぼすべてを再考、刷新する必要性
+  - 企業を競争上の新しい機会と脅威へ → [自社の事業はなんだろうか？]
+
+- 企業はテクノロジーそれ自体だけではなく、現に起きつつある競争状況の変化に眼を向けなければならない
+  
 ### 2-2 ITを起点とする競争の第三波
+
+#### (1) ITによる３つの変革
+
+1. 1960年代から70年代にかけて
+  - 注文処理、経費の支払い、CAD（コンピュータ支援設計）、MRP（製造資源計画）など、 <span style="color:red">バリューチェーン上の個々の活動を自動化</span>
+  - 標準化と独自戦略のジレンマ
+2. 1980年代と90年代
+  - インターネット誕生、どこからも接続可能
+  - 社内の納入業者、販売チャネル、顧客を巻き込み、地理的制約を乗り越えて多数の業務活動間の調整と統合が行えるようになった
+  - <span style="color:red">世界各地に分散したサプライチェーン</span>など
+  - 製品そのものはそのまま
+3. 現在
+  - ITは製品そのものに不可欠な存在に
+  - 製品に事実上コンピュータを内蔵、クラウド上で製品データを収集・分析、アプリケーション・ソフトウェアを稼働、製品の機能性と性能が向上、膨大なデータ
+
+- IoTがすべてを変えるという考え方→危険
+  - 競争のルールや競争優位は従来と変わらない
 
 ### 2-3 接続機能を持つスマート製品とは何か
 
+- 接続機能を持つスマート製品（Smart, Connected Products)の３つの柱
+  1. 物理的要素
+    - 機械部品と電気部品（エンジンブロック、タイヤ、バッテリーなど）
+  2. スマートな構成要素
+    - 物理的要素の性能や価値を高める（センサー、マイクロプロセッサ−、データストレージ、制御装置、ソフトウェア、組み込みOS、洗練度の高いユーザーインターフェース）
+    - 自動車の例：エンジンコントロールユニット、ABS、自動ワイパー付き水滴感知式ウィンドシールド、タッチパネルディスプレーなど
+  3. 接続機能
+    - 製品を有線ないし無線通信を介してインターネットに接続するためのポート、アンテナ、プロトコル
+
+
+- 接続形態
+  1. １対１：例、自動車が診断用危機に接続されるような場合
+  2. １対多：例、テスラモーターズ製自動車の多くは、性能のモニタリング、サービス、アップグレードの遠隔実施を目的として、製造元が運用する同一システムに接続される
+  3. 多対多：例、さまざまな種類の農業機械が、農業システムを調節、最適化するために相互に接続するほか、地理位置情報データともつながっている
+
+- 接続機能の役割
+  1. 製品と、その動作環境、製造元、利用者、他の製品やシステムとの情報交換を可能に
+  2. 製品機能の一部を物理的な機器の外、「製品クラウド」上に展開することができる
+
+- テクノロジースタックの構成要素
+  1. 製品内蔵の改良型ハードウェア、ソフトウェア・アプリケーション、OS
+  2. 製品クラウド：データベース、アプリケーションソフトを開発するためのプラットフォーム、ルールエンジンと解析プラットフォーム
+  3. ID認証とセキュリティ
+  4. 外部のデータ源とのゲートウェイ
+  5. 接続機能を持つスマート製品のデータを、他の業務（ERP, CRMシステムなど）に引き継ぐがめのツール
+
 ### 2-4 接続機能を持つスマート製品は何ができるのか？
 
+- スマート製品に付与される機能性
+  1. モニタリング
+  2. 制御
+  3. 最適化
+  4. 自律性
+
+#### (1) モニタリング（Minitoring）
+
+- センサーと外部からのデータを使って以下をモニタリング
+  - 製品の状態
+  - 外部環境
+  - 製品の稼働、利用状況
+- モニタリング機能は、異変が生じた場合の警告や通知にも役立つ
+
+#### (2) 制御（Control）
+
+- 製品ないし製品クラウドに搭載したソフトウェアによって以下を実現
+  - 製品機能の制御
+  - *ユーザーエクスペリエンスのパーソナル化*
+
+#### (3) 最適化（Optimization）
+
+- モニタリング機能と制御機能をもとに、アルゴリズムにより、以下の目的のために製品の稼働と使用を最適化する
+  - 製品性能の向上
+  - 予防的な診断、サービス、修理
+
+#### (4) 自律性（Autonomy）
+
+- モニタリング、制御、最適化を組み合わせて以下を実現する
+  - 製品の自動運用
+  - 他の製品やシステムとの自動的な連携
+  - 自動による製品の改良とパーソナル化
+  - 自己診断と修理
+
 ### 2-5 業界構造の変化
+
+- 競争状況は５つの競争要因
+  1. 買い手の交渉力（顧客の交渉力）
+  2. 既存企業同士の競争の性質と熾烈さ（業界内の企業）
+  3. 新規参入の脅威（将来の新規参入者）
+  4. 代替品や代替サービスの脅威（代替品）
+  5. サプライヤーの交渉力
+
+#### (1) 買い手の交渉力
+
+- スマート製品 → 製品差別化の機械を劇的に拡大
+  - 競争の軸：価格だけではなくなる
+    - 付加価値サービス拡充、顧客との関係性の強化
+- 買い手の交渉力を高める役割
+  - 製品の実際の性能をよりよく理解する機会の提供
+  - 製品の使用データの入手→メーカの助言に頼らない
+  - *「製品のサービス化」を目指すビジネスモデルや共有サービスの下では、製品の買い切り制度と比べて乗り換えコストが低くなり、買い手の交渉力が増す可能性
+
+#### (2) 既存企業同士の競争
+
+- 
 
 ### 2-6 業界間の新しい境界と「システムの複合体」
 
