--- a/_posts/2017-03-18-IoTの衝撃3.md
+++ b/_posts/2017-03-18-IoTの衝撃3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Iotの衝撃
+title: Iotの衝撃:IoT時代の製造業
 tags: 勉強 2017
 category: 読書 勉強
 ---
@@ -11,9 +11,84 @@ category: 読書 勉強
 
 ### 3-1 新製品の性能
 
+- スマート製品が企業行動をどのように変容させているかを把握するためには、製品の構成要素、技術、性能を理解しないといけない
+  - 物理的要素、スマートな構成要素、接続のための要素
+- 新しい技術インフラ（テクノロジースタック）
+  1. 製品自らの状態や環境をモニターして報告する機能を備えるため、性能や使用法に関して従来はなかった知見が得られる。
+  2. いくつもの遠隔装置があるため、製品の複雑な操作や運用をユーザーの手で管理できる
+  3. モニタリングデータと遠隔管理機能を組み合わせることで、新たな最適化機会が得られる（同一の大規模システム内の関連製品とんも連携が良くなる）
+  4. モニタリングデータ、遠隔制御、最適化アルゴリズムを組み合わせると、製品に自律性をもたせることができる。学習、外部環境やユーザーの嗜好への適応、自己診断や修理、自動運用など
+
 ### 3-2 メーカーの変容
 
+- バリューチェーン上の活動はすべて、接続機能を持つスマート製品の新しい性能や機能の影響を受ける。 *バリューチェーンの変容を促しているのは、突き詰めればデータである。*
+
+#### (1) 新しいデータ資源
+
+- スマート製品：多様で大量のデータをリアルタイムに供給→大きの事業の命運を左右
+- 新たに入手可能となった製品データは、それ自体に価値があるばかりか、他のデータ、たとえばサービス履歴、在庫のありか、物価、経路パターンなどとの統合によって飛躍的に価値が高まる
+
+#### (2) データ解析
+
+- データの価値を十分に活かす力が競争優位の重要な源泉→データの管理、分析、セキュリティ確保が重要な職能として台頭してきている。
+  - ビッグデータ解析、
+  - データレイク（さまざまな異質のデータを元の形式のまま格納）
+  - ツールは①記述的、②診断的、③予測的、④処方的に分類される
+  - デジタルツイン
+    - DARPA, 3Dデータをもとにリアルの製品を仮想的に複製するツール、デジタル版の双子
+
 ### 3-3 バリューチェーンの変化
+
+- 伝統的な職能分野の再編（製品開発分野からバリューチェーン全体に拡大）
+
+#### (1) 製品開発
+
+- 設計思想の根本的な転換を迫る
+  - 機械工学からソフトウェア（システムエンジニアリング）へ
+  - ボストンやシリコンバレーに拠点を開設
+
+##### (a) 低コストの可変性
+
+- スマート製品：ソフトウェアの力で低コストで可変性を備えることができる
+- *ハードウェアではなく、ソフトウェアによって可変性のニーズを満たすことが、重要な設計原則になっている*
+- ただし、データ標準をめぐる規制、国や地域による違い→データストレージに二重化、アプリケーションが必要になる
+
+##### (b) 常に先進性を保つ設計
+
+- スマート製品：ソフトウェアによって頻繁に更新できる、遠隔での更新可能
+- テスラのオートパイロット：ソフトウェアバージョンアップによる機能拡張
+
+##### (c) 新しいユーザーインターフェースと拡張現実(AR)
+
+- ARアプリケーションがデジタルオーバーレイを提供
+- 効率的な製品サポートやサービスに役立つ
+- 有益なデジタルインターフェースを設けること
+
+##### (d) たゆみない品質管理
+
+- スマート製品：品質管理の前進、実地の性能データを常時モニタリング
+- 試験では見つからなかった設計上の問題点をあぶり出す
+
+##### (e) 遠隔サービス
+
+- 製品の設計段階において、計測機能、データ収集機能、診断ソフトウェアを盛り込み、製品の状態や性能のモニタリング、故障や問題発生時の通報などを実現する必要がある
+
+##### (f) 新規ビジネスモデルの支援
+
+- スマート製品→「モノの販売」から「サービスの販売」へ
+- 自転車共有サービス Smoovy 盗難防止、耐久性向上、ドライブシャフト、壊れにくい備品採用
+- サービス→料金を適正水準に設定するために、利用状況を収集する必要がある。そこでセンサーの種類、設置場所、収集すべきデータ、分析頻度について理詰めで検討が必要
+
+##### (g) システムの相互運用性
+
+- 製品が大きなシステムに組み込まれると設計を最適化する機会が増える
+- 他社製品を含む製品ファミリーのハードウェアとソフトウェアを同時並行で開発
+- APIの重要性
+
+####(2) 製造
+
+##### (a) スマート工場
+
 
 ### 3-4 組織形態への意味合い
 
