IoTの衝撃：まとめ終了

--- a/_posts/2017-03-18-IoTの衝撃3.md
+++ b/_posts/2017-03-18-IoTの衝撃3.md
@@ -85,40 +85,250 @@ category: 読書 勉強
 - 他社製品を含む製品ファミリーのハードウェアとソフトウェアを同時並行で開発
 - APIの重要性
 
-####(2) 製造
+#### (2) 製造
 
 ##### (a) スマート工場
 
+- スマート製品の新たな能力：製造工場の業務運営それ自体も変容
+  - *機械同士がつながってシステムを形成する事例が増えている*
+  - 独：インダストリー4.0、米国のスマート製造、GEのブリリアンファクトリー構想
+
+##### (b) 部品の簡素化
+
+- ソフトウェアに機能性が備わる→製品の物理的な複雑さは解消される
+- 部品がなくなり、製造、組み立てに必要だった手順も省かれる
+- ただし、センサーやソフトウェアの数は増える→新たな部品や複雑さが加わる
+
+##### (c) 組み立てプロセスの変更
+
+- スマート製品：カスタマイゼーションを出荷後にできる（後工程にできる）
+- 新しいアプリケーションの導入、言語対応、製品の設計変更が容易
+
+##### (d) 終わりなき製造プロセス
+
+- 従来の製造：出荷と同時に終了
+- スマート製品：製品が利用に供されている間は運用と改善を続ける必要がある
+- *製造は終わりのないプロセスになるのだ*
+
+#### (3) 物流
+
+- スマート製品＝もともとは物流分野で生まれた
+- 追跡能力の向上→物流の新時代を開く
+  - 多数の車両の管理業務に革新
+  - ドローン、自動運転等の配送プロセスの革新
+  
+#### (4) マーケティングと販売
+
+- 製品の使われ方をモニタリング＝製品が顧客にもたらす長期的な価値の最大化へ
+- マーケティングと販売の新たな機会
+
+##### (a) セグメンテーションとカスタマイゼーションの新手法
+
+- スマート製品：製品の使用状況をかつてないほどガラス張りに
+- 顧客セグメンテーションの精緻化
+- より洗練された価格戦略
+
+##### (b) 新たな顧客の関係性
+
+- *製品はそれ自体が目的ではなく、顧客に価値を届ける手段になる*
+- 顧客と対話する基盤になる
+- 顧客との関係性が変わる（製品から長期的サービスの提供へ）
+
+##### (c) 新しいビジネスモデル
+
+- 製品の利用状況 → まったく新しいビジネスモデル
+- 販売担当者の目標
+  - 単に製品を売ることから、 *長期にわたる顧客の成功を支援すること* へと移行する
+  - 自社と顧客とのウィン・ウィン関係を築くためのシナリオを作る必要がある
+
+##### (d) 個々の製品ではなく、システム全体に焦点を当てる
+
+- 製品が大きなシステムの一部となる
+  - 製品単体で勝負する
+  - 密接に関連しあう製品群を提供する
+  - 関連製品すべての対応するプラットフォームを創造する
+- 自社の製品やサービスをスマートシステムの一部として売る
+  - 販売やマーケティングのチームに、これまでより幅広い知識が求められる
+  - かけている製品を補う、他社との協力が必須
+
+#### (5) アフターサービス
+
+- *アフターサービスは大きな売上、利益源*
+- 従来のサービス提供形態が本質的に非効率
+- スマート製品→サービスと効率の向上に寄与、受け身の対応から予防的な事前対応へ
+
+##### (a) ワンストップサービス
+
+- 診断作業は遠隔で行える
+  - 技術者は必要な部品を持っていけば良い
+  - 修理の成功確率、１回の出張で完結
+
+##### (b) 遠隔サービス
+
+- 通信ネットワークを介したサービスの提供
+- サービスコストの低減、装置の不稼働時間の短縮、顧客満足度の向上など
+
+##### (c) 予防的サービス
+
+- 予防的な分析→スマート製品の不具合を予測して、事前措置を講じることができる
+- 遠隔と技術者の派遣を組み合わせて実施
+
+##### (d) ARを用いたサービス
+
+- ARによるオーバーレイ表示を活用する方法
+- 必要とするサービスの中身や詳しい修理手順をAR表示
+
+##### (e) 新規サービス
+
+- スマート製品の接続性と解析力→新規サービスの誕生
+  - 製造業界においてはサービス部門がイノベーションの主な担い手
+  - キャタピラー：現場の各機械のデータを収集分析し、顧客への助言を行う
+
+#### (6) セキュリティ
+
+- ITセキュリティの確保→あらゆる職能分野が担うべき仕事に
+- スマート製品：ハッカーの攻撃対象、サイバー攻撃の拠点になりうる
+  - 物理的手段で守ることは困難
+  - DDos攻撃、ハッカーが他人の運転する車を制御(60ミニッツ)
+- セキュリテイ確保は付加価値、差別化要因
+- プライバシーの保護と適正な価格設定も重要な課題
+  - どのようなデータを収集して車内外でどう活用するかを、ガラス張りにしなくてはならない
+
+#### (7) 人的資源
+
+- 仕事のやり方も文化面の規範も従来と異なるものが求められる。
+
+##### (a) 新たな専門性
+
+- スマート製品の設計、販売、アフターサービスに必要なスキルは需要が大きい反面、供給が少ない
+- メーカー
+  - アプリケーションエンジニアリング、ユーザーインターフェースの開発、システム・インテグレーションの専門家を雇う必要がある
+  - データサイエンティストを採用する必要性
+  - 大学からのインターン、有力な技術ベンダーと提携して人材を派遣してもらう
+
+##### (b) 新しい組織文化
+
+- スマート製品：職能間、分野間の調整がはるかに多く求められる
+  - まちまちの人材、多様な経歴や文化的背景 → まとめることが難題に
+
+##### (c) 新しい報酬制度
+
+- 優秀な人材を惹きつけ、モチベーションを高めるためにも、新しい手法を必要としている
+  - 職務の柔軟性、コンシェルジェサービス、長期有給休暇、個人的な関心による副業的プロジェクトに一定時間を自由に費やす権利など
 
 ### 3-4 組織形態への意味合い
 
+- GEのジェフリー・イメルト会長兼CEO
+  - ものづくりに関わる企業はすべてソフトウェア企業になるだろう
+
+- スマート製品の分野で競争する上で必須の方向
+  - 頻繁な更新を前提とした設計、遠隔更新、製品のサービス化
+
+- 設計、業務オペレーション、販売、サービス、ITなど、複数の職能同士の密接な連携を状態化することが必要になる→ 各職能の役割は重複し、境界が曖昧になる
+
+1. IT部門とR&D部門の協働や連携
+2. 統合データ部門、開発運用部門、顧客成功管理部門
+3. 製品とデータのセキュリティを守る活動→不透明
+
+#### (1) ITとR&Dの協働
+
+- 従来
+  - R&D部門：製品を創造
+  - IT部門：会社のコンピュータインフラやCAD, ERP, CRM など、職能分野が利用するソフトウェアツールの管理
+- スマート機器
+  - IT部門が中心的な役割
+  - 責任のありかが問題になる
+
+#### (2) 統合型データ部門
+
+- 新たなデータ資源を最大限に活かす狙いから、データ専門の組織を設ける動き
+- データの収集、集約、解析を一手に引き受け、社内の全職能、全事業部がデータや知見を利用できるようにする責任を負う
+- 最高データ責任者(CDO)が率いるのが一般的
+  - フォード・モーター：CDOを任命、スマート製品のデータを活用して、顧客の嗜好の理解、接続機能を持つ自動車の将来戦略の策定、社内業務プロセスの再構築など
+ 
+#### (3) 開発運用部門
+
+- 時代遅れにならない製品の設計、休みない製品運用とサポート、頻繁な製品アップグレードが欠かせない状況
+  - *「開発運用部門」(devOps) などの名称を持つ職能グループが必要になっている*
+- 納品後もスマート製品の性能を管理、最適化する責任を負う
+- 製品提供サイクルの短縮、製品の更新や不具合修正の管理、販売後の新サービスや機能拡充
+- 不具合などを予防するサービスの向上や製品のメンテナンスも開発運用部門の役割である
+
+#### (4) 顧客成功管理部門
+
+- 顧客経験を管理して顧客が製品を最大限に活用できるようにする責任を担う部門
+- 製品を販売した後の顧客関係性に中心的な役割を果たす
+- スマート製品→製品それ自体が顧客が受け取る価値を測るセンサーの役割を果たす
+  - これにより顧客離れを防ぐほか、顧客にとって有用な追加機能や追加サービスが何かをつかむことができる
+
+#### (5) セキュリティ確保に向けた共同責任
+
+- セキュリティは、製品開発、開発運用、IT、フィールドサービスほか、さまざまな部門に関連する問題である
+- R&D、IT、データ各部門間の緊密な協働は必須
+- ただし、いまだ組織モデルが確立していない
+
 ### 3-5 新組織への移行を実施する
+
+- 過渡期の組織携帯
+
+#### (1) スタンドアローン型組織
+
+- 損益責任を負う独立事業部にスマート製品に関する製品戦略を委ねる方法
+- すべての事業部と連携しながら人材を結集して技術と資産を活用
+- 将来的には、スタンドアローン型組織が個々の事業部の施策を後押しするどころか、足を引っ張る恐れがある
+- スタンドアローン型組織が蓄えた知識は、全社で共有されるまでに時間がかかるだろう
+
+#### (2) センター・オブ・エクセレンス
+
+- スマート製品に関する重要な専門性を本社の一組織に集約する方法
+- 損益責任を負わなくても良いが、コストセンターにすべきである
+- 企業が経営される内において、コストは集計されるものの利益は集計されない部門のことを言う。 このことからコストセンターでの収支は、コストの上下だけが業績に表れるため、コストを下げるということが基本的な目標として経営される。
+
+#### (3) 事業部横断的な諮問委員会
+
+- さまざまな事業部から、事業機会の後押し、専門性の共有、協働の促進に熱心な思想リーダーを集めて委員会を設置する手法
+- 一般に正式な意思決定権を持たず、変革を推進する力には限界があるかも知れない
 
 ### 3-6 幅広い意味合い
 
-## 4 GEが目指すインダストリアル・インターネット
+- スマート製品
+  - 経済価値を創造する機会に激変をもたらす
+  - 製造分野に留まらず、接続機能を持つ製品と関連サービスを使う他産業にも波及している
+  - 製造系企業の組織が真の破壊的変換にさらされている
+- 競争上の脅威やセキュリティ上の課題
+- 製品を買い替えなくても常に改良され、常に最新式になる
 
-- マルコ・イアンシティ ハーバード・ビジネス・スクール教授
-- カリム・R・ラカニー ハーバード・ビジネス・スクール教授
+- 仕事への影響
+- 経済成長の次なる原動力に
+- ARアプリとスマートフォン→少し訓練しただけで複雑な修理をこなせるようになる
+- 専門家による非熟練労働者のコーチングや指導も従来と比べてはるかにやりやすくなる
+- この革新を速やかに成し遂げる企業や組織は、繁栄を手にし、世の中を大きく変えるだろう。
 
-### 4-1 デジタルがあらゆる場面で活用される時代の到来
+### 3-7 ソフトウェア業界から学ぶこと
 
-### 4-1 価値の創出と回収を再考する
+#### (1) 製品開発サイクルを短縮する
 
-### 4-2 GEの変革
+- 大きな製品を一定期間でリリースする方法から、小規模な更新や高度化を頻繁に行うようになってきた
+- アジャイル開発
+  - 開発者とマーケターの日常的な協働、週次の高度化、頻繁な軌道修正、顧客満足度の継続的な把握
 
-### 4-3 GEの枠を越える
+#### (2) 製品をサービス化する
 
-### 4-4 デジタルユビキティへのアプローチ
+- サービス主体のビジネスモデルへ
+- 顧客は設備投資を避け、導入の手間も省ける
+- 顧客の製品利用状況や満足度を丹念に把握する習慣を身につけた
 
-### 4-5 新たな仕組みと新たなリスク
+#### (3) 顧客の成功を重視する
 
-## 5 [インタビュー] データは誰のものか
+- 製品から常に高い価値が得られるようにすることが欠かせない
+- この目的を果たすことに特化した顧客対応チームを設けている
 
-- アレックス・サンディ・ペントランド MITメディアラボ教授
+#### (4) 製品をシステムの一部と位置づける
 
-### 5-1 データの収集をどこまで許すか
+- ほとんどのソフトウェアを、ビジネスツールの「集積体（スタック）」の一部と位置づけ、全体の統合によってその価値を高める。ソフトウェア企業の勝組企業は、自社製品を第三者製ソフトウェアと統合しやすように、APIなどのツールを提供する例が多い
 
-### 5-2 個人データの扱いを当人の管理下に置く
+#### (5) 解析（アナリティクス）を競争優位の源泉にする
 
-### 5-3 データをかき集める戦略は結局のところ高くつく
+- eコマースを行う企業→データ解析がいかに有用であるかを認識している
+- 広告を収益源とする企業は、適切なタイミング、つまり、顧客の注意と行動を引き出す可能性が最も高い時に広告を表示するために解析を駆使している。
+- 利用状況に関するデータマイニング
