脆弱性Warningに対応してみた

--- a/_posts/2018-12-29-IVTCCOBラン2010-2017.md
+++ b/_posts/2018-12-29-IVTCCOBラン2010-2017.md
@@ -8,6 +8,8 @@ tags: 写真
 
 2010から2017年の職業大OBラン＆懇親会の写真です
 
+* [2017年 OBラン（和田さん）](http://img.gg/t6IPuN0)
+
 * [2016年 瀬戸口さん IVTCC思い出](https://nis.nikonimagespace.com/html/guest/index.html?g=oYAOielKslKlN0EkMxqn0jCBUaEH1HBQoeDJH1I6IE7UnATWb8Xcd5Re_wosx5nVtjY9c258zw1U-3oJihhkAA)
 
 * [2016年度 OBラン](https://nis.nikonimagespace.com/html/guest/index.html?g=oYAOielKslKlN0EkMxqn0jCBUaEH1HBQswWzifozULjUnATWb8Xcd5Re_wosx5nVtjY9c258zw1U-3oJihhkAA)
