--- a/_posts/2025-07-10-テスト.md
+++ b/_posts/2025-07-10-テスト.md
@@ -7,7 +7,8 @@ category: 試験
 # 試験
 ## (1) カスタムURLスキーム
 * [ツール](https://qa-test-tools.narutyo.workers.dev/)
-* [test](eyachoch7:///new?template=https://mps-test.metamoji.com/link/5NdT3ymRXem_B09IzUOy7Qzd.mmjloc&folder=https://mps-test.metamoji.com/link/M7nWBJq6SFjaDzn7tVuJ_3RQ.mmjloc)
+* [test(new)](eyachoch7:///new?template=https://mps-test.metamoji.com/link/5NdT3ymRXem_B09IzUOy7Qzd.mmjloc&folder=https://mps-test.metamoji.com/link/M7nWBJq6SFjaDzn7tVuJ_3RQ.mmjloc)
+* [test(nsk/new)](eyachoch7:///nsk/new?template=https://mps-test.metamoji.com/link/5NdT3ymRXem_B09IzUOy7Qzd.mmjloc&folder=https://mps-test.metamoji.com/link/M7nWBJq6SFjaDzn7tVuJ_3RQ.mmjloc)
 
 
 
